@@ -244,7 +244,13 @@ Other Changes
     Also: new Factories for all Tokenizers and TokenFilters provided by the
     lucene-analyzers-2.2.0.jar -- includes support for German, Chinese,
     Russan, Dutch, Greek, Brazilian, Thai, and French.   (hossman)
-     
+
+Build
+ 1. SOLR-411.  Changed the names of the Solr JARs to use the defacto standard JAR names based on
+ project-name-version.jar.  This yields, for example:
+  apache-solr-common-1.3-dev.jar
+  apache-solr-solrj-1.3-dev.jar
+  apache-solr-1.3-dev.jar
 
 ================== Release 1.2, 20070602 ==================
 
